update shards info

--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: socks
 version: 0.1.0
 
 authors:
-  - Jack Thorne <jthorne@eligoenergy.com>
+  - Jack Thorne <jack@kilmer.co>
 
 crystal: 0.26.1
 
