--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/docs/
 /lib/
 /bin/
 /.shards/
@@ -7,3 +6,5 @@
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /shard.lock
+
+.DS_Store
